# qml-hello

./: pyproject.toml
src/qml_hello/: main.py
src/qml_hello/qml/Hello/: main.qml  qmldir
tests/: conftest.py  test_main.py
tests/qml/: tst_main.qml
